* Fri Feb 10 2017 - version 0.8.0
- Require haveapi-client v0.8

* Fri Nov 25 2016 - version 0.7.1
- No changes

* Thu Nov 24 2016 - version 0.7.0
- Option `block` enables action blocking mode
- Rename MetaDir and MetaFile to ProxyDir and ProxyFile
- Add metadata input/output parameters
- Fix typo in handling of boolean input parameters
- Show and parse custom parameters as JSON

* Mon Apr 18 2016 - version 0.1.0
- Initial release