@@ -19,6 +19,8 @@ require_relative 'fs/component'
 require_relative 'fs/factory'
 require_relative 'fs/help'
 require_relative 'fs/remote_control'
+require_relative 'fs/hash_wrapper'
+require_relative 'fs/hash_list_wrapper'
 require_relative 'fs/version'
 require_relative 'fs/auth/base'
 require_relative 'fs/auth/basic'
