@@ -1,3 +1,6 @@
+- Wrapper for hash and hash_list formats, so that they behave the same as
+  object and object_list
+
 * Fri Feb 10 2017 - version 0.8.0
 - Require haveapi-client v0.8
 
